@@ -1,5 +1,9 @@
 Changes for APR 1.2.8
 
+  *) Fix apr_snprintf/apr_vsnprintf return value to not count the
+     NUL terminator in the overflow case.  PR 39996.
+     [Michal Luczaj <regenrecht o2.pl>]
+
   *) Provide folding in autogenerated .manifest files for Win32 builders
      using VisualStudio 2005  [William Rowe]
 
